add connection between Users and Tasks
